# relstorage

./: .coveragerc  .gitignore  .landscape.yml  .project  .pylintrc  .readthedocs.yml  .travis.yml  BUILDOUT.rst  CHANGELOG.txt  CHANGES.rst  CHANGES.txt  COPYRIGHT.txt  HISTORY.txt  MANIFEST  MANIFEST.in  README.rst  README.txt  README_ptBR.txt  appveyor.yml  bootstrap.py  buildout-oracle.cfg  buildout.cfg  doc-requirements.txt  poll-invalidation-1-zodb-3-7-1.patch  poll-invalidation-1-zodb-3-8-0.patch  poll-invalidation-1-zodb-3-9-0a12.patch  poll-invalidation-zodb-3-7.patch  poll-invalidation-zodb-3-8.patch  pyproject.toml  setup.cfg  setup.py  tox.ini  version.txt
.github/workflows/: tests.yml
.travis/: docker.cnf  install.sh  make-manylinux  mysql.cmd  mysql.sh  postgres.cmd  postgres.sh  release.sh  releases.sh  setup-cmysqlconnector.sh  setup-mysql.sh  setup-mysqlconnector.sh  setup-oldzodb.sh  setup-oracle.sh  setup-postgres.sh  setup-pymysql.sh  setup-pypostgres.sh  setup-umysqldb.sh  zope_testrunner_gevent.py
1.1-jarn/: README.txt
1.1-jarn/notes/: migrate-1.0-beta.txt
1.1-jarn/relstorage/: __init__.py  relstorage.py  zodbconvert.py
doc/: HISTORY.rst  cache-tracing.rst  conf.py  configure-application.rst  configure-database.rst  contents.rst  db-specific-options.rst  developing.rst  faq.rst  generate_rst.py  index.rst  install.rst  migration.rst  performance.rst  relstorage-options.rst  zodbconvert.rst  zodbpack.rst  zodburi.rst
doc/.mocks/: _pylibmc.py  cx_Oracle.py
doc/developing/: caching.rst  packing.rst  running.rst
doc/migration/: migrate-to-1.1.1.rst  migrate-to-1.1.2.rst  migrate-to-1.5.rst
docs/: Makefile  command-line-utilities.rst  conf.py  configuration-reference.rst  configure-application.rst  configure-database.rst  contents.rst  db-specific-options.rst  faq.rst  generate_rst.py  getting-started.rst  index.rst  install.rst  internals.rst  migration.rst  old_history.rst  performance.rst  relstorage-options.rst  supported-databases.rst  things-to-know.rst  zodbconvert.rst  zodbpack.rst  zodburi.rst
docs/.mocks/: pylibmc.py
docs/developing/: caching.rst  running.rst
docs/migration/: migrate-to-1.0.rst  migrate-to-1.1.rst  migrate-to-1.4.rst  migrate-to-3.0.rst
docs/mysql/: index.rst  install.rst  options.rst  setup.rst
docs/oracle/: index.rst  install.rst  options.rst  setup.rst
docs/postgresql/: index.rst  install.rst  options.rst  pgbouncer.rst  setup.rst
docs/sqlite3/: faq.rst  index.rst  install.rst  options.rst  setup.rst
include/: README.rst
notes/: caching.txt  migrate-1.0-beta.txt  migrate-1.0.1.txt  migrate-to-1.1.1.txt  migrate-to-1.1.2.txt  migrate-to-1.1.txt  migrate-to-1.4.txt  migrate-to-1.5.txt  migrate.sql  oracle_notes.txt  pack_policy.ods  quicktest.py  shootout.ods
relstorage/: __init__.py  _compat.py  autotemp.py  blobhelper.py  cache.py  compat.py  component.xml  config.py  iter.py  options.py  pylibmc_wrapper.py  relstorage.py  storage.py  treemark.py  util.py  zodbconvert.py  zodbpack.py  zodburi_resolver.py
relstorage/adapters/: _abstract_drivers.py  _mysql_drivers.py  _oracle_drivers.py  _postgresql_drivers.py  _util.py  abstract.py  batch.py  common.py  connmanager.py  dbiter.py  hfmover.py  historyfree.py  historypreserving.py  hpmover.py  interfaces.py  loadstore.py  locker.py  mover.py  mysql.py  oidallocator.py  oracle.py  packundo.py  poller.py  postgresql.py  replica.py  schema.py  scriptrunner.py  stats.py  txncontrol.py
relstorage/cache/: __init__.py  _cache_ring_build.py  cache_ring.c  cache_ring.h  cache_ring.py  interfaces.py  local_client.py  lru.h  lru.py  mapping.py  micro_benchmark_results.rst  persistence.py  ring.c  ring.h  ring.py  storage_cache.py  trace.py
relstorage/tests/: README.txt  RecoveryStorage.py  __init__.py  alltests.py  bigmark.py  bigpack.py  cache_trace_analysis.rst  comparison.ods  fakecache.py  hftestbase.py  hptestbase.py  packlesstestbase.py  packstresstest.py  reltestbase.py  replicas.conf  ro_replicas.conf  speedtest.py  test_autotemp.py  test_blobhelper.py  test_cache.py  test_cache_stats.py  test_treemark.py  test_zodbconvert.py  test_zodbpack.py  test_zodburi.py  testmysql.py  testoracle.py  testpacklesspostgresql.py  testpostgresql.py  util.py
repltest/: my.cnf.in  mysql-no-read-etc.patch
repltest/master/: buildout.cfg  notes  replicas.conf
repltest/slave/: buildout.cfg  notes
scripts/: zodbconvert.py
scripts/releases/: geventrel.sh  geventreleases.sh  make-manylinux  relstoragerel.sh  relstoragereleases.sh
(+360 files in other folders)
