[build-system]
build-backend = "setuptools.build_meta"
requires = [
     "setuptools >= 40.8.0",
     # Python 3.7 requires at least Cython 0.27.3.
     # 0.28 is faster, and (important!) lets us specify the target module
     # name to be created so that we can have both foo.py and _foo.so
     # at the same time. 0.29 fixes some issues with Python 3.7,
     # and adds the 3str mode for transition to Python 3. 0.29.12+ is
     # required for Python 3.8. 3.0a2 introduced a change that prevented
     # us from compiling (https://github.com/gevent/gevent/issues/1599)
     # but once that was fixed, 3.0a4 led to all of our leak tests
     # failing in Python 2 (https://travis-ci.org/github/gevent/gevent/jobs/683782800);
     # This was fixed in 3.0a5 (https://github.com/cython/cython/issues/3578).
     # 3.0 in general has improved language support.
     # Python 3.12 requires a snapshot at this writing (2023-06-29). This is just before
     # 3.0rc1
     # "Cython @ https://github.com/cython/cython/archive/37f4dcdc04547875e2836fda076f5707ec50e579.zip",
     # Unfortunately, markers like python_version do not work for remote installs,
     # so we always install that, even if we then provide a different requirement where
     # markers DO work. This is a problem beacuse the snapshot cannot be compiled on Appveyor.
     # That's OK, because our tests.yml and make-manylinux install this stuff manually where markers
     # DO work. It just means that we cannot be built from a sdist on Python 3.12 without
     # --no-build-isolation or using setup.py directly; but as soon as the Cython version is released,
     # we can be.

     "Cython >= 3.0b3",
     # cffi on py3.12 macOS at least fails to install from its wheel if we let it get installed
     # as part of persistent:
     # OSError: [Errno 66] Directory not empty: '///persistent.../.eggs/cffi-1.15.1-py3.12-macosx-10.9-universal2.egg/cffi-1.15.1.dist-info' -> '//persistent_/.eggs/cffi-1.15.1-py3.12-macosx-10.9-universal2.egg/EGG-INFO'
     # Installing it here seems to get us past that
     "cffi; python_version >= '3.12'"

]
