[build-system]
build-backend = "setuptools.build_meta"
requires = [
     "setuptools >= 40.8.0",
     # Python 3.7 requires at least Cython 0.27.3.
     # 0.28 is faster, and (important!) lets us specify the target module
     # name to be created so that we can have both foo.py and _foo.so
     # at the same time. 0.29 fixes some issues with Python 3.7,
     # and adds the 3str mode for transition to Python 3. 0.29.12+ is
     # required for Python 3.8. 3.0a2 introduced a change that prevented
     # us from compiling (https://github.com/gevent/gevent/issues/1599)
     # but once that was fixed, 3.0a4 led to all of our leak tests
     # failing in Python 2 (https://travis-ci.org/github/gevent/gevent/jobs/683782800);
     # This was fixed in 3.0a5 (https://github.com/cython/cython/issues/3578).
     # 3.0 in general has improved language support.
     # Python 3.12 requires 3.0rc2

     "Cython >= 3.0",
     # cffi on py3.12 macOS at least fails to install from its wheel if we let it get installed
     # as part of persistent:
     # OSError: [Errno 66] Directory not empty: '///persistent.../.eggs/cffi-1.15.1-py3.12-macosx-10.9-universal2.egg/cffi-1.15.1.dist-info' -> '//persistent_/.eggs/cffi-1.15.1-py3.12-macosx-10.9-universal2.egg/EGG-INFO'
     # Installing it here seems to get us past that
     "cffi; python_version >= '3.12'"

]
